# doxyde

./: .env  .gitignore  BENCHMARKING.md  CLAUDE.md  CONFIGURATION_TEST_COVERAGE.md  Cargo.toml  MIGRATION.md  MULTISITE_ACTIVATION.md  README.md  TODO.md  WEBSITE_STRUCTURE.md  benchmark-concurrent.sh  benchmark-results.md  claude2.md  cleanup_test_pages.py  comprehensive_mcp_tests.py  cookies.txt  doxyde-mcp.sh  doxyde-sse.toml.example  doxyde.conf.example  doxyde.db-journal  doxyde.db.backup-20250722-192701  example-doxyde.conf  fix_async_trait.sh  fix_axum_imports.sh  fix_host_imports.sh  mcp-proxy.sh  revert_host_imports.sh  run_mcp_tests.py  test_add_component_mcp.sh  test_create_page_mcp.sh  test_domain.rs  test_image_upload.sh  test_jsonrpc_fix.sh  test_mcp.sh  test_mcp_error_handling.sh  test_mcp_error_simple.sh  test_mcp_final.sh  test_mcp_response.sh  test_mcp_tools_list.sh  (+7 more)
.cargo/: config.toml
.serena/: project.yml
.sqlx/: query-0531fdce73b50a5d9f0e5c78f23d82ed70faac8776f824e134fde7077d5cd2dd.json  query-0cddd2b6839b95c6b8abf20af3e3fbc516929d0c03483e7fdc8470d551128542.json  query-1147327c6ce1981176fc767e1aacb3b56bc94c50e9edf2f5616847269bcba393.json  query-11de996fa034f17f5d7f1348dbee5fdbbdcfca7c5142f0f96c6702040cb19530.json  query-12bdf15ead19d30504a9f8f188f7f3a283d724c322e5a3530716f16dce1ed812.json  query-165c1c19a53adec935db08f83c95834c25e80bb668442d1eeab2980839bf5526.json  query-1b6d4bc0b9f38345879c186168dc21e6b329b82c1978ba6825d565dda25745e1.json  query-1ecfdbc0398f81ad799202c98e960c947fbd11a29811e3b2129ca69a2ceae4fd.json  query-220747051fe392e8e32f61b3531d6396525404465bfee46bf1c80e1abcabd4e2.json  query-25f568b8ec619b052208e8e33c32e9a81419e300de448408af2d3186bde4da30.json  query-280ccfda92a4c03d6535b1849773ed6ac538bb0b78ef5eb86673959f751c7c7c.json  query-2f06c66a533e6df160b9cd1689f1d985ab907a5f13a03e98dd2d199035b0c61f.json  query-3092eed5d71335406359450b0b1e961b3dd4440f4384fd80c1db0703ad868160.json  query-330bc5e245e340782c68d70943f5bd0e176b7528586a6d101b71159f00404b2b.json  query-350d882d938300abbaf6fd26ba18c31c912a08615f44c1a36d39d375ef26c945.json  query-3b0b0d3299e6c5d0177872a545f92c1989cd41c081e7c5785ace3be243b28919.json  query-3c9d2d76f09ce69ca796fe07fb0cc5ba422696700b3de427459f24c4a94a26d3.json  query-3d302cafbc7a903a40e53dfe327819c0f5860ba41dbaf3a0ad61684b85ca2704.json  (+58 more)
docs/: INDEX.md  (+2 more)
doxyde-ai/: Cargo.toml
doxyde-cli/: Cargo.toml
doxyde-cli/src/: main.rs
doxyde-cli/tests/: multi_site_test.rs
doxyde-core/: Cargo.toml
doxyde-core/src/: lib.rs  models.rs
doxyde-core/src/models/: component.rs  component_factory.rs  component_handler.rs  component_trait.rs  mcp_token.rs  page.rs  permission.rs  session.rs  site.rs  site_asset.rs  site_style.rs  site_template.rs  style_utils.rs  user.rs  version.rs
doxyde-core/src/models/components/: blog_summary_component.rs  code_component.rs  contact_form_component.rs  custom_component.rs  html_component.rs  image_component.rs  markdown_component.rs  mod.rs  text_component.rs
doxyde-core/src/utils/: slug.rs
doxyde-db/: Cargo.toml
doxyde-db/benches/: repository_bench.rs
doxyde-db/src/: init.rs  lib.rs  repositories.rs
doxyde-db/src/repositories/: access_token_repository.rs  authorization_code_repository.rs  booking_repository.rs  component_repository.rs  mcp_token_repository.rs  oauth_client_repository.rs  page_repository.rs  page_version_repository.rs  refresh_token_repository.rs  session_repository.rs  site_asset_repository.rs  site_repository.rs  site_style_repository.rs  site_template_repository.rs  site_user_repository.rs  user_repository.rs
doxyde-mcp/: Cargo.toml  README.md  claude_desktop_config.example.json
doxyde-mcp/src/: auth.rs  cleanup.rs  command.rs  lib.rs  messages.rs  server.rs  tools.rs  uploads.rs
doxyde-mcp/src/mcp/: service.rs
doxyde-mcp/src/oauth/: validation.rs
doxyde-shared/: Cargo.toml
doxyde-shared/src/: lib.rs
doxyde-shared/src/mcp/: mod.rs  service.rs
doxyde-shared/src/oauth/: mod.rs  validation.rs
doxyde-sse/: Cargo.toml
doxyde-sse/src/: config.rs  main.rs
doxyde-tagger/: Cargo.toml  README.md
doxyde-tagger/src/: error.rs  expression.rs  lib.rs  preserve.rs  replacer.rs  tokenizer.rs
doxyde-tagger/tests/: perl_compat.rs
doxyde-web/: Cargo.toml  SECURITY_AUDIT_PATH_TRAVERSAL.md  SECURITY_FIX_PATH_TRAVERSAL.patch
doxyde-web/src/: action_registry.rs  analytics.rs  attribution.rs  auth.rs  autoreload_templates.rs  component_registry.rs  component_render.rs  config.rs  constants.rs  content.rs  content_translate.rs  cors.rs  csrf.rs  db.rs  db_middleware.rs  db_router.rs  debug_middleware.rs  domain_utils.rs  draft.rs  error.rs  error_middleware.rs  languages.rs  lib.rs  locale_middleware.rs  logo.rs  main.rs  markdown.rs  mcp_simple.rs  path_security.rs  rate_limit.rs  request_logging.rs  routes.rs  security_headers.rs  session.rs  session_activity.rs  site_config.rs  site_resolver.rs  site_template_engine.rs  state.rs  template_context.rs  (+8 more)
doxyde-web/src/configuration/: defaults.rs  mod.rs  parser.rs
doxyde-web/src/handlers/: action.rs  auth.rs  booking.rs  contact_form.rs  delete_page.rs  edit.rs  image_serve.rs  image_upload.rs  llms_txt.rs  mcp_http.rs  mcp_oauth.rs  mcp_oauth_head.rs  mcp_server.rs  mcp_server_simple.rs  mcp_sse.rs  mcp_sse_fixed.rs  mcp_tokens.rs  mod.rs  move_page.rs  pages.rs  properties.rs  reorder.rs  shared.rs  site_assets.rs  site_handlers.rs  sites.rs
doxyde-web/src/oauth2/: authorization.rs  client_registration.rs  discovery.rs  errors.rs  errors_test.rs  mod.rs  models.rs  tests.rs  token.rs
doxyde-web/src/rmcp/: discovery.rs  handlers.rs  mod.rs  oauth.rs  service.rs
doxyde-web/src/services/: deferred_translation.rs  i18n.rs  mcp_service.rs  mod.rs  sejours_client.rs  translation.rs  warm.rs
doxyde-web/templates/: base.html  login.html  page.html  page_delete.html  page_edit.html  page_move.html  page_new.html  page_properties.html  page_reorder.html
doxyde-web/templates/mcp/: list.html  show.html
doxyde-web/tests/: booking_json_tests.rs  configuration_integration_tests.rs  security_tests.rs
(+137 files in other folders)
