[workspace]
members = [
    "doxyde-core",
    "doxyde-db",
    "doxyde-web",
    "doxyde-cli",
    "doxyde-tagger",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Doxyde Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Web
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Testing
pretty_assertions = "1.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# Auth & Security
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"

# Session & Cookies
axum-extra = { version = "0.9", features = ["cookie", "typed-header", "form"] }
cookie = "0.18"
serde_urlencoded = "0.7"

# Templates
tera = "1.20"

# Markdown
pulldown-cmark = "0.11"
ammonia = "4"

# File uploads
multer = "3.0"
image = "0.25"

# Async utilities
futures = "0.3"
url = "2.5"
once_cell = "1.19"