[package]
name = "doxyde-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "doxyde"
path = "src/main.rs"

[[bin]]
name = "doxyde-multidb-migrate"
path = "src/bin/doxyde-multidb-migrate.rs"

[dependencies]
doxyde-core = { path = "../doxyde-core" }
doxyde-db = { path = "../doxyde-db" }
doxyde-web = { path = "../doxyde-web" }
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
sqlx.workspace = true
dotenvy = "0.15"
rpassword = "7.3"
sha2 = "0.10"
hex = "0.4"
serde_json.workspace = true
image.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true