[package]
name = "doxyde-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true