[package]
name = "doxyde-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
doxyde-core = { path = "../doxyde-core" }
doxyde-db = { path = "../doxyde-db" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true

# MCP and JSON-RPC dependencies
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP client for authentication
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Configuration
clap = { version = "4.0", features = ["derive", "env"] }
dotenvy = "0.15"

[[bin]]
name = "doxyde-mcp-server"
path = "src/bin/mcp_server.rs"

[dev-dependencies]
pretty_assertions.workspace = true
mockito = "1.2"