[package]
name = "doxyde-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client for forwarding requests
reqwest = { version = "0.12", features = ["json"] }

# Configuration
clap = { version = "4.0", features = ["derive", "env"] }

[[bin]]
name = "doxyde-mcp-server"
path = "src/bin/mcp_server.rs"

[dev-dependencies]
pretty_assertions.workspace = true
mockito = "1.2"