[package]
name = "doxyde-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "doxyde-web"
path = "src/main.rs"

[dependencies]
doxyde-core = { path = "../doxyde-core" }
doxyde-db = { path = "../doxyde-db" }
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
cookie.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tera.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
serde_urlencoded.workspace = true
multer.workspace = true
image.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true