[package]
name = "doxyde-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "doxyde-web"
path = "src/main.rs"

[dependencies]
doxyde-core = { path = "../doxyde-core" }
doxyde-db = { path = "../doxyde-db" }
anyhow.workspace = true
rand = "0.8"
chrono-tz = "0.9"
urlencoding = "2.1"
tokio-stream = "0.1"
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
cookie.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tera.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
serde_urlencoded.workspace = true
multer.workspace = true
image.workspace = true
futures.workspace = true
url.workspace = true
once_cell = "1.19"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true